apps/web-giddh/src/assets/css/style-2.scss
/* ... */
.gst-sidebar-open {
    .nav-left-bar{
        -moz-transition: all 100ms linear;
        -webkit-transition: all 100ms linear;
        -o-transition: all 100ms linear;
        transition: all 100ms linear;
        -moz-transform: translate3d(-100px, 0px, 0px);
        -webkit-transform: translate3d(-100px, 0px, 0px);
        -o-transform: translate(-100px, 0px);
        -ms-transform: translate(-100px, 0px);
        transform: translate3d(-100px, 0px, 0px);
        box-shadow: 0 0 3px rgba(0, 0, 0, 0.2) !important;
    }
}
.gst-sidebar-open {
    .gst-sidebar {
        left: 60px !important;
    }
    #content-wrapper {
        padding-left: 300px !important;
    }
    .nav-left-bar {
        display: block;
        z-index: 9991 !important;
        -moz-transform: translate3d(0px, 0px, 0px);
        -webkit-transform: translate3d(0px, 0px, 0px);
        -o-transform: translate(0px, 0px);
        -ms-transform: translate(0px, 0px);
        transform: translate3d(0px, 0px, 0px);
    }
    .plan-wrapper {
        padding-left: 300px !important;
    }
    .menu_open {
        .gst-sidebar {
            left: 60px !important;
        }
        #content-wrapper {
            padding-left: 240px;
        }
        .plan-wrapper {
            padding-left: 60px;
        }
    }
}
body.update-scroll-hidden {
    overflow-y: hidden;
}
.e-waybill-tabs.custom-tabs .nav-tabs {
    position: static !important;
    padding-left: 15px !important;
}
.e-waybill-tabs.custom-tabs .nav-tabs {
    position: static !important;
    padding-left: 15px !important;
}

body.update-scroll-hidden {
    overflow-y: hidden;
}
.wrap-billing-address.clearfix {
    .bottom-border-only {
        padding-left: 0 !important;
    }
}
.nav-left-bar{
    &.width-60  {
        .sidebar-collapse {
            .sub-menu{
                display: none !important;
            }
        }
    }
}
.nav-left-bar{
    &.width-60  {
        .sidebar-collapse {
            .sub-menu{
                display: none !important;
            }
        }
    }
}
.on-setting-page, .on-user-page{
    aside-setting{
        .aside-pane{
            .back-to-main-slider{
                display: block !important;
                padding: 0 12px;
            }
            h4{
                display: none;
            }
        }
        &::after{
            display: none;
        }
    }

}
.on-setting-page.aside-setting, .on-user-page.aside-setting{
    #content-wrapper{
        padding-right: 240px;
    }
}
.gst-sidebar-open.on-setting-page.aside-setting{
    #content-wrapper{
        padding-right: 0;
    }
}
.company-branch-dropdown{
    .custom-tabs {
        ul {
            &.nav.nav-tabs{
                position: inherit !important;
                background-color: transparent;
                padding-left: 0 !important;
                margin: 0;
                flex-wrap: nowrap;
                width: initial;
                display: flex;
                justify-content: space-between;
                padding-top: 0 !important;
                li{
                    position: relative;
                    &.active{
                        a{
                            color: $midnight-blue !important;
                            border-bottom: 2px solid $midnight-blue !important;
                        }
                    }
                    padding-right: 0;
                    &.icon-company{
                        &:before{
                            position: absolute;
                            left: 20px;
                        }
                    }
                    a{
                        min-width: 110px;
                        font-family: 'opensans-regular';
                        color: $grey-chateau !important;
                        padding-top: 5px !important;
                        padding-left: 20px !important;
                        height: 30px;
                    }
                }
            }
            .nav-item{
                &.icon-company{
                    &.active{
                        &::before{
                            color: $midnight-blue;
                        }
                    }
                    &::before{
                        position: absolute !important;
                        left: 20px !important;
                        top: 5px;
                        color: $grey-chateau;
                    }
                }
                &.icon-branch1{
                    &.active{
                        &::before{
                            color: $midnight-blue;
                        }
                    }
                    &::before{
                        position: absolute !important;
                        left: 20px !important;
                        top: 5px;
                        color: $grey-chateau;
                    }
                }
            }
        }
    }
}
.manage-account-popup.full-screen-modal{
    z-index: 999991;
}
body.update-scroll-hidden{
    overflow-y: hidden;
}
.gst-sidebar-open{
    .daterangepicker.show-calendar{
        z-index: 99 !important;
    }
}
/* responsive  starts here*/

@media (max-width: 1440px) {
    .font-xxlarge {
        font-size: 20px;
    }
}
/* ... */

